<resources>
    <string name="internetConnectionWarning_title">There is no Internet connection</string>
    <string name="internetConnectionWarning_message">Check your mobile data or WI-FI connection</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="Cards">Cards</string>
    <string name="nav_cards">Cards</string>
    <string name="nav_history">History</string>
    <string name="nav_partners">Partners</string>
    <string name="nav_presents">Partnerzy</string>
    <string name="cofnijPrzycisk">Cofnij</string>
    <string name="dalejPrzycisk">Dalej</string>
    <string name="numerKarty">Numer karty</string>
    <string name="imageViewQrCode">QR_CODE</string>
    <string name="kodKarty">Kod Karty</string>
    <string name="phoneNumber">Numer Telefonu</string>
    <string name="email">Email</string>
    <string name="registerButton">Zarejestruj</string>
    <string name="formatDaty">xxxx-xx-xx</string>
    <string name="dataUrodzenia">Data urodzenia:</string>
    <string name="płeć">Płeć:</string>
    <string name="imie">Imie:</string>
    <string name="akceptacjaRegulaminu">Akceptuje regulamin dostępny na www.delly.pl</string>
    <string name="kodPocztowy">Kod Pocztowy:</string>
    <string name="facet">Mezczyzna   </string>
    <string name="kobieta">Kobieta</string>
    <string name="gratulacje">Gratulacje!</string>
    <string name="podsumowanieInformacja">To już prawie koniec, teraz sprawdź swoją skrzynkę mailową aby dokończyć rejestrace.</string>
    <string name="login">Zaloguj</string>
    <string name="kartaInfo">Twoja karta główna</string>
    <string name="title_activity_main">fragment_Cards_2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="delly_name">Delly</string>
    <string name="title_activity_drawer">activity_drawer</string>
    <string name="nav_test">Karty</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_drawable">drawable</string>
    <string name="title_activity_main_activityy">MainActivityy</string>
    <string name="ZalogujSieDoDelly">Zaloguj się do Delly</string>
    <string name="buttonZalogujSie">Zaloguj się</string>
    <string name="nieMaszJeszczeKonta">Nie masz konta? Zarejestruj się!</string>
    <string name="rules">Regulamin</string>
    <string name="textView_activitySignupFirstStep_numerKodTwojejKartyDelly">Numer i kod Twojej karty Delly</string>
    <string name="SkadDostacKarte">Kartę Delly można otrzymać u naszych Partnerów, których listę znajdziesz na partnerzy.delly.pl</string>
    <string name="buttonAddNewCard">Dodaj Kartę</string>
    <string name="settings">Ustawienia</string>
    <string name="dellyRules">Regulamin programu Delly</string>
    <string name="logout">Wyloguj</string>
    <string name="aboutYou">O Tobie</string>
    <string name="sex">Pleć:</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="yourPassword">Twoje hasło</string>
    <string name="setYourPassword">Ustal swoje hasło, którym będziesz się logować do Delly.</string>
    <string name="infoAboutPassword">Hasło powinno zawierać minimum 6 znaków, wielką literę, cyfrę i znak specjalny.</string>
    <string name="buttonSavePassword">ZAPISZ HASŁO</string>
    <string name="whereCanIGetCardinfo">Kartę Delly można otrzymać u naszych Partnerów, których listę znajdziesz na partnerzy.delly.pl</string>
    <string name="textView_activitySignupSecondStep_TwojeDaneKontaktowe">Twoje dane kontaktowe</string>
    <string name="textView_activitySignupThirdStep_AboutYou">O Tobie</string>
    <string name="name">Imię</string>
    <string name="dateOfBirth">Data urodzenia</string>
    <string name="zipCode">Kod pocztowy</string>
    <string name="acceptules">Akceptuję Regulamin programu</string>
    <string name="congratulatons">Gratulacje!</string>
    <string name="finishInformation">Pomyślnie ukończyłeś rejestrację!Na podany przez Ciebie adres e-mail w cięgu kilku najbliższych minut wysłane zostanie hasło jednorazowe, którego należy użyć podczas pierwszego logowania do systemu Delly."</string>
    <string name="gotoLogin">PRZEJŹ DO LOGOWANIA</string>
    <string name="contactDetail">Twoje dane kontaktowe</string>
    <string name="codePhone">Nr kierunkowy</string>
    <string name="updateData">AKTUALIZUJ DANE</string>
    <string name="yourNewPassword">Twoje nowe hasło</string>
    <string name="saveNewPassword">ZAPISZ NOWE HASŁO</string>
    <string name="repeatPassword">Powtórz hasło</string>
    <string name="password">Hasło</string>
    <string name="infoAboutNewPassword">Hasło powinno zawierać minimum 6 znaków, wielką literę i cyfrę..</string>
    <string name="partners">Partnerzy</string>
    <string name="sortNumberDescending">Sortuj po odległości ↓</string>
    <string name="sortNumberAscending">Sortuj po ogległości ↑</string>
    <string name="sortA_Z">Sortuj alfabetycznie</string>

    <string-array name="numbers">
        <item>@string/sortNumberDescending</item>
        <item>@string/sortNumberAscending</item>
        <item>@string/sortA_Z</item>
    </string-array>
    <string name="title_activity_extender_partner">ExtenderPartnerActivity</string>
    <string name="nav_rewards">Nagrody</string>
    <string name="availableSpecialPrizes">Dostępne nagrody specjalne</string>
    <string name="number">Numer</string>
    <string name="code">Kod</string>
    <string name="availablePrizes">Dostępne nagrody</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoutAsking">Jestes pewien, że chcesz się wylogować?</string>
    <string name="yes">TAK</string>
    <string name="no">Nie</string>
    <string name="oldPassword">Wpisz stare hasło</string>
    <string name="newPassword">Wpisz swoje nowe hasło</string>
    <string name="repeatNewPassword">Powtórz swoje nowe hasło</string>
    <string name="loginError">Błędny login lub hasło.</string>


</resources>
