<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project.activity_fragments_class.Registration.SignupActivity_ThirdStep">

    <EditText
        android:id="@+id/editTextImie"
        android:layout_width="163dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewImie"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textViewKodPocztowy"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/kodPocztowy"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextImie" />

    <TextView
        android:id="@+id/textViewImie"
        android:layout_width="53dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/imie"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


    <TextView
        android:id="@+id/textViewPlec"
        android:layout_width="53dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/płeć"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kalendarz" />

    <CheckBox
        android:id="@+id/checkBoxRegulamin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/akceptacjaRegulaminu"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="parent" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="305dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textViewPlec"
        app:layout_constraintTop_toBottomOf="@+id/kalendarz">

        <RadioButton
            android:id="@+id/RadioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/facet"/>

        <RadioButton
            android:id="@+id/RadioButtonFemale"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:text="@string/kobieta" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewWybranaDataUrodzenia"
        android:layout_width="157dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="44dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/kalendarz"
        app:layout_constraintTop_toBottomOf="@+id/textViewInformacjaONiskimWieku" />

    <TextView
        android:id="@+id/textViewInformacjaONiskimWieku"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_marginTop="104dp"
        android:background="@color/blue_normal"
        android:text=""
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/registerButton" />

    <ImageView
        android:id="@+id/kalendarz"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toEndOf="@+id/textViewDataUrodzenia"
        app:layout_constraintTop_toBottomOf="@+id/textViewInformacjaONiskimWieku"
        app:srcCompat="@drawable/qr_code" />

    <TextView
        android:id="@+id/textViewDataUrodzenia"
        android:layout_width="171dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:text="@string/dataUrodzenia"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInformacjaONiskimWieku" />

    <EditText
        android:id="@+id/editTextKodPocztowy"
        android:layout_width="172dp"
        android:layout_height="43dp"
        android:maxLength="5"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewKodPocztowy"
        app:layout_constraintTop_toBottomOf="@+id/editTextImie" />


</android.support.constraint.ConstraintLayout>
