<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project.activity_fragments_class.Registration.SignupActivity_FourthStep">

    <RelativeLayout
        android:id="@+id/relativeLayout_activitySignupFourthStep_up"
        android:layout_width="match_parent"
        android:layout_height="600dp">

        <TextView
            android:id="@+id/textView_activitySignupFourth_congratulations"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulatons"
            android:gravity="center_horizontal"
            android:textSize="28dp"/>

        <TextView
            android:id="@+id/textView_activitySignupFourth_finishInformation"
            android:layout_below="@id/textView_activitySignupFourth_congratulations"
            android:layout_marginTop="20dp"
            android:text="@string/finishInformation"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_activitySignupFourthStep"
            android:layout_below="@id/textView_activitySignupFourth_finishInformation"
            android:layout_marginTop="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_edittext"
            android:backgroundTint="@color/colorDellyGreen"
            android:text="@string/gotoLogin"
            android:textColor="@color/colorWhite" />



    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/layout_activitySignupFourthStep_transiston_create"
        android:layout_below="@id/relativeLayout_activitySignupFourthStep_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/delly_background"
        android:transitionName="example_transistion">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite"
            android:lines="2"
            android:gravity="center"
            android:text="Udało się! Brawo Ty!"
            android:textSize="20dp"/>

    </RelativeLayout>

</RelativeLayout>
